// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin captures worklets environment 1`] = `
"var x = 5;
var objX = {
  x
};
var _worklet_3447562087488_init_data = {
  code: "function f(){const{x,objX}=this.__closure;return{res:x+objX.x};}",
  location: "${ process.cwd() }/jest tests fixture"
};
var f = function () {
  var _e = [new Error(), -3, -20];
  var _f = function () {
    return {
      res: x + objX.x
    };
  };
  _f.__closure = {
    x,
    objX: {
      x: objX.x
    }
  };
  _f.__initData = _worklet_3447562087488_init_data;
  _f.__workletHash = 3447562087488;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin doesn't capture globals 1`] = `
"var _worklet_13298016111221_init_data = {
  code: "function f(){console.log('test');}",
  location: "${ process.cwd() }/jest tests fixture"
};
var f = function () {
  var _e = [new Error(), 1, -20];
  var _f = function () {
    console.log('test');
  };
  _f.__closure = {};
  _f.__initData = _worklet_13298016111221_init_data;
  _f.__workletHash = 13298016111221;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin doesn't transform standard callback functions 1`] = `
"var foo = Something.Tap().onEnd((_event, _success) => {
  console.log('onEnd');
});"
`;

exports[`babel plugin doesn't transform string literals 1`] = `
"var _worklet_7442778059540_init_data = {
  code: "function foo(x){var bar='worklet';var baz=\\"worklet\\";}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (x) {
    var bar = 'worklet';
    var baz = "worklet";
  };
  _f.__closure = {};
  _f.__initData = _worklet_7442778059540_init_data;
  _f.__workletHash = 7442778059540;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin supports SequenceExpression 1`] = `
"function App() {
  (0, fun)({
    onStart() {}
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, many arguments 1`] = `
"function App() {
  (0, 3, fun)({
    onStart() {
      'worklet';
    }
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, with worklet 1`] = `
"function App() {
  (0, fun)({
    onStart() {
      'worklet';
    }
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, with worklet closure 1`] = `
"function App() {
  var obj = {
    a: 1,
    b: 2
  };
  (0, fun)({
    onStart() {
      'worklet';

      var a = obj.a;
    }
  }, []);
}"
`;

exports[`babel plugin supports nested worklets keeping worklet decoration for inner worklet 1`] = `
"var _worklet_16463389415794_init_data = {
  code: "function anonymous(){return 200;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var _worklet_2627040947483_init_data = {
  code: "function anonymous(){const{_worklet_16463389415794_init_data}=this.__closure;var b=function(){var _e=[new Error(),1,-20];var _f=function(){return 200;};_f.__closure={};_f.__initData=_worklet_16463389415794_init_data;_f.__workletHash=16463389415794;_f.__stackDetails=_e;return _f;}();return 100+b();}",
  location: "${ process.cwd() }/jest tests fixture"
};
var f = function () {
  var _e = [new Error(), -2, -20];
  var _f = function () {
    var b = function () {
      var _e = [new Error(), 1, -20];
      var _f = function () {
        return 200;
      };
      _f.__closure = {};
      _f.__initData = _worklet_16463389415794_init_data;
      _f.__workletHash = 16463389415794;
      _f.__stackDetails = _e;
      return _f;
    }();
    return 100 + b();
  };
  _f.__closure = {
    _worklet_16463389415794_init_data
  };
  _f.__initData = _worklet_2627040947483_init_data;
  _f.__workletHash = 2627040947483;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin supports recursive calls 1`] = `
"var a = 1;
var _worklet_210900050506_init_data = {
  code: "function foo(t){const foo=this._recur;const{a}=this.__closure;if(t>0){return a+foo(t-1);}}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), -2, -20];
  var _f = function (t) {
    if (t > 0) {
      return a + foo(t - 1);
    }
  };
  _f.__closure = {
    a
  };
  _f.__initData = _worklet_210900050506_init_data;
  _f.__workletHash = 210900050506;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms 1`] = `
"var _reactNativeReanimated = _interopRequireWildcard(require("react-native-reanimated"));
var _jsxRuntime = require("react/jsx-runtime");
function _getRequireWildcardCache(nodeInterop) { if (typeof WeakMap !== "function") return null; var cacheBabelInterop = new WeakMap(); var cacheNodeInterop = new WeakMap(); return (_getRequireWildcardCache = function (nodeInterop) { return nodeInterop ? cacheNodeInterop : cacheBabelInterop; })(nodeInterop); }
function _interopRequireWildcard(obj, nodeInterop) { if (!nodeInterop && obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== "object" && typeof obj !== "function") { return { default: obj }; } var cache = _getRequireWildcardCache(nodeInterop); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }
function Box() {
  var offset = (0, _reactNativeReanimated.useSharedValue)(0);
  var animatedStyles = (0, _reactNativeReanimated.useAnimatedStyle)(() => {
    return {
      transform: [{
        translateX: offset.value * 255
      }]
    };
  });
  return (0, _jsxRuntime.jsxs)(_jsxRuntime.Fragment, {
    children: [(0, _jsxRuntime.jsx)(_reactNativeReanimated.default.View, {
      style: [styles.box, animatedStyles]
    }), (0, _jsxRuntime.jsx)(Button, {
      onPress: () => offset.value = Math.random(),
      title: "Move"
    })]
  });
}"
`;

exports[`babel plugin transforms spread operator in worklets for arrays 1`] = `
"var _worklet_9873901588810_init_data = {
  code: "function foo(){var bar=[4,5];var baz=[1,...[2,3],...bar];}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function () {
    var bar = [4, 5];
    var baz = [1, ...[2, 3], ...bar];
  };
  _f.__closure = {};
  _f.__initData = _worklet_9873901588810_init_data;
  _f.__workletHash = 9873901588810;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for function arguments 1`] = `
"var _worklet_9866931756941_init_data = {
  code: "function foo(...args){console.log(args);}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (...args) {
    console.log(args);
  };
  _f.__closure = {};
  _f.__initData = _worklet_9866931756941_init_data;
  _f.__workletHash = 9866931756941;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for function calls 1`] = `
"var _worklet_2015887751437_init_data = {
  code: "function foo(arg){console.log(...arg);}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (arg) {
    console.log(...arg);
  };
  _f.__closure = {};
  _f.__initData = _worklet_2015887751437_init_data;
  _f.__workletHash = 2015887751437;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for objects 1`] = `
"var _worklet_15246532152337_init_data = {
  code: "function foo(){var bar={d:4,e:5};var baz={a:1,...{b:2,c:3},...bar};}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function () {
    var bar = {
      d: 4,
      e: 5
    };
    var baz = {
      a: 1,
      ...{
        b: 2,
        c: 3
      },
      ...bar
    };
  };
  _f.__closure = {};
  _f.__initData = _worklet_15246532152337_init_data;
  _f.__workletHash = 15246532152337;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes ArrowFunctionExpression 1`] = `
"var _worklet_16347365292089_init_data = {
  code: "function anonymous(x){return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (x) {
    return x + 2;
  };
  _f.__closure = {};
  _f.__initData = _worklet_16347365292089_init_data;
  _f.__workletHash = 16347365292089;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes FunctionDeclaration 1`] = `
"var _worklet_4679479961836_init_data = {
  code: "function foo(x){return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (x) {
    return x + 2;
  };
  _f.__closure = {};
  _f.__initData = _worklet_4679479961836_init_data;
  _f.__workletHash = 4679479961836;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes getter 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_13643399006149_init_data = {
  code: "function anonymous(){const{x}=this.__closure;return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  return (0, _createClass2.default)(Foo, [{
    key: "bar",
    get: function () {
      var _e = [new Error(), -2, -20];
      var _f = function () {
        return x + 2;
      };
      _f.__closure = {
        x
      };
      _f.__initData = _worklet_13643399006149_init_data;
      _f.__workletHash = 13643399006149;
      _f.__stackDetails = _e;
      return _f;
    }()
  }]);
}();"
`;

exports[`babel plugin workletizes instance method 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_16974800582491_init_data = {
  code: "function bar(x){return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  return (0, _createClass2.default)(Foo, [{
    key: "bar",
    value: function () {
      var _e = [new Error(), 1, -20];
      var _f = function (x) {
        return x + 2;
      };
      _f.__closure = {};
      _f.__initData = _worklet_16974800582491_init_data;
      _f.__workletHash = 16974800582491;
      _f.__stackDetails = _e;
      return _f;
    }()
  }]);
}();"
`;

exports[`babel plugin workletizes named FunctionExpression 1`] = `
"var _worklet_4679479961836_init_data = {
  code: "function foo(x){return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (x) {
    return x + 2;
  };
  _f.__closure = {};
  _f.__initData = _worklet_4679479961836_init_data;
  _f.__workletHash = 4679479961836;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes static method 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_16974800582491_init_data = {
  code: "function bar(x){return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  return (0, _createClass2.default)(Foo, null, [{
    key: "bar",
    value: function () {
      var _e = [new Error(), 1, -20];
      var _f = function (x) {
        return x + 2;
      };
      _f.__closure = {};
      _f.__initData = _worklet_16974800582491_init_data;
      _f.__workletHash = 16974800582491;
      _f.__stackDetails = _e;
      return _f;
    }()
  }]);
}();"
`;

exports[`babel plugin workletizes unnamed FunctionExpression 1`] = `
"var _worklet_16347365292089_init_data = {
  code: "function anonymous(x){return x+2;}",
  location: "${ process.cwd() }/jest tests fixture"
};
var foo = function () {
  var _e = [new Error(), 1, -20];
  var _f = function (x) {
    return x + 2;
  };
  _f.__closure = {};
  _f.__initData = _worklet_16347365292089_init_data;
  _f.__workletHash = 16347365292089;
  _f.__stackDetails = _e;
  return _f;
}();"
`;
